calc2 updated with ce button

--- a/calc2/index.html
+++ b/calc2/index.html
@@ -38,7 +38,10 @@
             <td> <input class="button" type="button" value="." onclick="display('.')"></td>
             <td> <input class="button" type="button" value="0" onclick="display('0')"></td>
             <td> <input class="button" type="button" value="=" onclick="calculate()" style="background-color: #fb0066;"></td>
-            <td> <input class="button" type="button" value="*" onclick="display('*')"></td>
+            <td> <input class="button" type="button" value="X" onclick="display('*')"></td>
+         </tr>
+         <tr>
+            <td> <input class="button" type="button" value="CE" onclick="backspace()"></td>
          </tr>
     </table>
     <script src="index.js"></script>
